	Fixed so the HTML4 runtime only submits the defined multipart_params arguments.
	Fixes issue where it wasn't possible to dynamically override url or mutlipart_params for the HTML4 runtime.
	Fixed so all runtimes pass the name, chunk and chunks parameters as multipart parameters instead of querystring parameters.
Version 1.2.4 (2010-09-08)
	Added new BeforeUpload event to make it easier to override settings before a file is uploaded.
	Added new automatic usage of FileReference in Flash if it's possible. Contributed by Marcel Jackwerth.
	Added new chunking support for Chrome 5 and Firefox 3.6 using the HTML 5 runtime.
	Added new multipart upload support for WebKit using the HTML 5 runtime and the FormData object.
	Added new image scaling method for the Flash runtime contributed by rcoopman.
	Added new alert error message if the user selected invalid files.
	Added new automatic unique name generation to the example.php script. Contributed by Brandon Kelly.
	Changed so the default upload method is multipart and the default chunk size is 0.
	Fixed progress issue with the HTML5 runtime running on Gecko.
	Fixed so longer extensions can be used such as .tar.gz.
	Fixed so the file extension is retained when using the unique_names option.
Version 1.2.3 (2010-05-27)
	Added new drag/drop support for HTML5 running on Chrome beta.
	Added new multipart state for the features object. It's now possible to detect multipart support.
	Added new getFeatures function to all runtime. Basic concept by Javier Martinez Fernandez.
	Fixed bug where runtimes where initialized even if they didn't match the required_features setting.
Version 1.2.2.1 (2010-05-04)
	Added new headers option, enables you to set custom headers for the upload requests.
	Fixed bug where the file extension checking was case sensitive.
Version 1.2.2 (2010-04-26)
	Added new file_data_name option that enables you to set the multipart file data param. Patch contributed by Alex Ganov.