@@ -7,6 +7,7 @@ Version 1.2.x (2010-xx-xx)
 	Fixed so the HTML4 runtime only submits the defined multipart_params arguments.
 	Fixes issue where it wasn't possible to dynamically override url or mutlipart_params for the HTML4 runtime.
 	Fixed so all runtimes pass the name, chunk and chunks parameters as multipart parameters instead of querystring parameters.
+	Fixed so files are read using the newer FileReader class if it's available if not it tries the older getAsXXX on Gecko.
 Version 1.2.4 (2010-09-08)
 	Added new BeforeUpload event to make it easier to override settings before a file is uploaded.
 	Added new automatic usage of FileReference in Flash if it's possible. Contributed by Marcel Jackwerth.
